--- a/sea_biology/package.json
+++ b/sea_biology/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "bootstrap": "^5.0.1",
     "core-js": "^3.8.3",
     "particles.vue3": "^2.2.4",
     "tsparticles": "^2.2.4",
