--- a/sea_biology/package.json
+++ b/sea_biology/package.json
@@ -14,7 +14,8 @@
     "core-js": "^3.8.3",
     "particles.vue3": "^2.2.4",
     "tsparticles": "^2.2.4",
-    "vue": "^3.2.13"
+    "vue": "^3.2.13",
+    "vue-router": "^4.1.6"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
