--- a/sea_biology/package.json
+++ b/sea_biology/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "animate.css": "^4.1.1",
     "aos": "^2.3.4",
     "axios": "^1.1.3",
     "bootstrap": "^5.0.1",
